--- a/src/RaccoonDocumentation.Web/Views/Shared/_Layout.cshtml
+++ b/src/RaccoonDocumentation.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <title>ViewBag.Title</title>
 
     <!--[if lt IE 9]>
-    <script src="@Url.Content("~/Content/js/html5shim.js")"></script>
+    <script src="@Url.Content("~/scripts/html5shim.js")"></script>
     <![endif]-->
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/ResetCss.css")">
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/Site.css")">
