--- a/src/RaccoonDocumentation.Web/Views/Shared/_Layout.cshtml
+++ b/src/RaccoonDocumentation.Web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="containter">
-		
+		 @RenderBody()
 	</div>
 	@if (IsSectionDefined("Script")) {
 		<script src="@Url.Content("~/scripts/jquery-1.6.1.min.js")" type="text/javascript"></script>
